# dojo

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-project-scaffold-tooling/: 01-01-SUMMARY.md  01-01-project-bootstrap-PLAN.md  01-02-SUMMARY.md  01-02-settings-logging-PLAN.md  01-03-SUMMARY.md  01-03-database-alembic-PLAN.md  01-04-SUMMARY.md  01-04-web-routes-PLAN.md  01-05-SUMMARY.md  01-05-test-infrastructure-PLAN.md  01-06-SUMMARY.md  01-06-tooling-ci-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-VALIDATION.md  LEARNINGS.md  SUMMARY.md  VERIFICATION.md
.planning/phases/02-domain-application-spine/: 02-01-SUMMARY.md  02-01-domain-entities-PLAN.md  02-02-SUMMARY.md  02-02-application-ports-dtos-PLAN.md  02-03-SUMMARY.md  02-03-hand-written-fakes-PLAN.md  02-04-SUMMARY.md  02-04-generate-from-source-use-case-PLAN.md  02-05-SUMMARY.md  02-05-contract-harness-import-linter-PLAN.md  02-ARCHITECTURE.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md
.planning/phases/03-infrastructure-adapters/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: __init__.py  logging_config.py  main.py  settings.py
app/application/: __init__.py  dtos.py  exceptions.py  extractor_registry.py  ports.py  registry.py
app/application/use_cases/: __init__.py  generate_from_source.py
app/domain/: __init__.py  entities.py  exceptions.py  value_objects.py
app/infrastructure/: __init__.py
app/infrastructure/db/: __init__.py  mappers.py  models.py  session.py
app/infrastructure/llm/: __init__.py  _exceptions_map.py  _response_parser.py  anthropic_provider.py  tool_schema.py
app/infrastructure/repositories/: __init__.py  sql_card_repository.py  sql_card_review_repository.py  sql_note_repository.py  sql_source_repository.py
app/web/: __init__.py
app/web/routes/: __init__.py  home.py
app/web/templates/: base.html  home.html
docs/architecture/: overview.md
docs/study/: phase-01.md
docs/superpowers/specs/: 2026-04-18-dojo-design.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_create_initial_schema.py
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_card_repository_contract.py  test_card_review_repository_contract.py  test_llm_provider_contract.py  test_note_repository_contract.py  test_source_repository_contract.py
tests/fakes/: __init__.py  fake_card_repository.py  fake_card_review_repository.py  fake_draft_store.py  fake_llm_provider.py  fake_note_repository.py  fake_source_repository.py
tests/integration/: __init__.py  test_alembic_metadata.py  test_alembic_round_trip.py  test_alembic_smoke.py  test_anthropic_provider.py  test_anthropic_retry_count.py  test_db_smoke.py  test_home.py  test_logging_smoke.py  test_main_lifespan.py  test_sql_repositories_atomic.py  test_sql_repositories_regenerate.py  test_sqlite_pragmas.py
tests/unit/: __init__.py  conftest.py  test_exceptions_map.py  test_mappers.py  test_settings.py
tests/unit/application/: __init__.py  test_dtos.py  test_exceptions.py  test_extractor_registry.py  test_generate_topic.py  test_generate_unsupported.py  test_ports.py  test_registry.py  test_use_case_dtos.py
tests/unit/domain/: __init__.py  test_card.py  test_card_review.py  test_exceptions.py  test_note.py  test_source.py  test_value_objects.py
tests/unit/fakes/: __init__.py  test_fake_card_repository.py  test_fake_card_review_repository.py  test_fake_draft_store.py  test_fake_llm_provider.py  test_fake_note_repository.py  test_fake_source_repository.py  test_structural_subtype.py
